# MOPO_hydropower_model_tool

./: .gitignore  README.md  requirements.txt
Equivalent/: 02_main_PSO.py  fitnessPSO.py  get_period_data.py  naive_aggregation.py  read_ext_eq_inflow.py  read_scenario_data.py  run_PSO_multi.py  save_eq.py  save_output.py  set_config.py  set_pso_problem.py  solve_equivalent_compact.py
Inflow/: LICENSE  README.md  pyproject.toml
Inflow/scripts/: .env  02_main_data.py  config.py  country_mapping.json  database_eSett_api.py  predict_inflow.py
Inflow/src/config_data/: country_map.toml  user_config.toml
Inflow/src/eu_hydro_inflow/: __main__.py  config_data_handle.py  data_check.py  data_process.py  database_cds_api.py  database_eSett_api.py  database_entsoe_api.py  fetch_inflow.py  geoprocess.py  user_argparse.py
Inlfow/scripts/: 01_main_generate_corres_points.py  _config.json  check_missing_data.py  config.py  database_entsoe_api.py  geo_process.py  predict_inflow_run.py  predict_ror.py  read_process_data.py  reservoir_inflow.py  ror_inflow.py
